# ethernet-agent

./: CHANGELOG.md  NOTICE  README.md  configure.ac
.github/: CODEOWNERS
.github/workflows/: native-build.yml
config/: TR181-EthAgent.xml
cov_docker_script/: component_config.json  configure_options.conf
hal_schema/: example_publishEvent_msg.json  example_result_msg.json  example_subscribeEvent_msg.json
source/: Makefile.am
source/EthSsp/: Makefile.am  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/TR-181/: Makefile.am
source/TR-181/board_sbapi/: Makefile.am  cosa_ethernet_apis.c  cosa_ethernet_manager.c  eth_hal_interface.c
source/TR-181/board_sbapi/source-arm/: cosa_ethernet_apis_arm.c  cosa_ethernet_apis_ext_arm.h
source/TR-181/include/: cosa_ethernet_apis.h  cosa_ethernet_manager.h
source/TR-181/middle_layer_src/: Makefile.am  cosa_apis.h  cosa_apis_busutil.c  cosa_apis_busutil.h  cosa_apis_util.c  cosa_apis_util.h  cosa_dml_api_common.h  cosa_ethernet_dml.c  cosa_ethernet_dml.h  cosa_ethernet_interface_dml.c  cosa_ethernet_interface_dml.h  cosa_ethernet_internal.c  cosa_ethernet_internal.h  cosa_rbus_handler_apis.c  cosa_rbus_handler_apis.h  plugin_main.c  plugin_main.h  plugin_main_apis.c  plugin_main_apis.h
source/test/: CcspEthAgentSspTest.cpp  CcspEthAgent_mock.cpp  CcspEthAgent_mock.h  Makefile.am  cosa_Ethernet_apiTest.cpp  cosa_Ethernet_apis_arm.cpp  gtest_main.cpp  run_ut.sh
source/test/mocks/: mock_ccspethagent.cpp  mock_ccspethagent.h
